fix alignment on episodes page

--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -241,7 +241,7 @@ h2#episodesPageTitle{
     border: 2px solid black;
     padding: 10px;
     text-align: center;
-    margin-left:-200px;
+    margin-left:-150px;
 }
 
 #blueTire{
@@ -295,20 +295,22 @@ div#mediaContainer{
     padding-left:20px;
 }
 
-iframe#stream{
+iframe.stream{
     border-radius: 24px;
     border: black;
     z-index:8;
+    margin-right:-50px;
 }
 
-ul p.activeDesc, ul p.activeDescTitle{
-    color:white;
+.activeDescTitle, .activeDesc{
+    margin-right:-50px;
 }
 
 ul p.activeDesc{
     color:white;
     margin-top:-40px;
 }
+
 
 #episodeBG{
     z-index:-1;
